test: build our own docker image for Bedework 5
There is no public Bedework image newer than ioggstream/bedework from
2018, and no single repository to build from either - upstream is ~20
git repos assembled into a Wildfly galleon feature pack, which is what
their own install instructions tell deployers to fetch.  So the new
tests/docker-test-servers/bedework/ installs
org.bedework.deploy:bw-wf-feature-pack:5.0.0 with galleon, and the 2018
image moves aside to bedework3 so the plain name can mean a current
server.  Feature pack 5.0.0 does not come up on its own, so three
upstream bugs are patched at build time, each in its own script with the
reasoning in its header: unreadable pre-seeded H2 databases, a missing
module dependency that takes /ucaldav down along with /cal, and an
ApacheDS that cannot run on the JDK upstream prescribes.  No
compatibility profile and no CI job are added - the 3.10.3 numbers say
nothing about a 5.x server, and the image has to be built locally, as
for OX.

CHANGELOG.md is left out of this commit; it also carries an entry from
concurrent work in the same worktree.

Prompt: like with ox, it seems like we need to build our own docker-image for newer versions of bedework.  Try to build a container based on the main branch.  The old bedework docker image should be remaned (sic) bedework3. [there is no main branch to build from; the feature pack is what upstream ships]
Followup-Prompt: (asked whether to build on the 97%-full root filesystem anyway, and whether to use the released 5.0.0 feature pack rather than a full source build; answered yes to both)
Followup-Prompt: There should not be any `caldav_test_servers.yaml` under ~/caldav, only under ~/caldav-with-passwords.
Followup-Prompt: There should not be any need for hard-coding the docker-based servers in `caldav_test_servers.yaml` (please confirm).
Followup-Prompt: So the file can safely be deleted. [confirmed: auto_discover() finds every docker server from its directory and enables it wit